// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component should render with a given initial-value 1`] = `
<DocumentFragment>
  <div
    data-open="true"
    data-testid="overlay"
  >
    <div
      class="container"
    >
      <div
        class="grid grid"
      >
        <div
          class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <div
              data-testid="single-autocomplete"
            />
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <div
              data-testid="map-container"
            >
              <div
                data-testid="tile-layer"
              />
              <div
                data-testid="marker"
              />
            </div>
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.latitude *
            </label>
            <div
              class="input default left"
            >
              <input
                step="0.001"
                type="number"
                value="22"
              />
            </div>
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.longitude *
            </label>
            <div
              class="input default left"
            >
              <input
                step="0.001"
                type="number"
                value="33"
              />
            </div>
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.zoom *
            </label>
            <div
              class="input default left"
            >
              <input
                max="18"
                min="0"
                type="number"
                value="5"
              />
            </div>
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="divider"
            >
              sulu_location.additional_information
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.title
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value="title-123"
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.street
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value="street-123"
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.number
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value=""
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.code
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value="code-123"
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.town
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value="town-123"
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.country
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value=""
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component should render without a given initial-value 1`] = `
<DocumentFragment>
  <div
    data-open="true"
    data-testid="overlay"
  >
    <div
      class="container"
    >
      <div
        class="grid grid"
      >
        <div
          class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <div
              data-testid="single-autocomplete"
            />
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <div
              data-testid="map-container"
            >
              <div
                data-testid="tile-layer"
              />
              <div
                data-testid="marker"
              />
            </div>
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.latitude *
            </label>
            <div
              class="input default left"
            >
              <input
                step="0.001"
                type="number"
                value=""
              />
            </div>
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.longitude *
            </label>
            <div
              class="input default left"
            >
              <input
                step="0.001"
                type="number"
                value=""
              />
            </div>
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.zoom *
            </label>
            <div
              class="input default left"
            >
              <input
                max="18"
                min="0"
                type="number"
                value="1"
              />
            </div>
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="divider"
            >
              sulu_location.additional_information
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.title
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value=""
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.street
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value=""
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.number
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value=""
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.code
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value=""
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.town
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value=""
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.country
              </label>
              <div
                class="input default left"
              >
                <input
                  type="text"
                  value=""
                />
              </div>
              <div
                class="errorLabel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
